--- a/_posts/2014-09-21-services-1.markdown
+++ b/_posts/2014-09-21-services-1.markdown
@@ -9,7 +9,4 @@ description: |
 
 you can [get the PDF]({{ https://patrickkabongo.github.io }}/assets/file.pdf) directly.
 
-<a href="{{ https://patrickkabongo.github.io }}/assets/file.pdf" target="_blank">
-		 {{ get another PDF }}
-		 
-		 </a>
+<a href="{{ https://patrickkabongo.github.io }}/assets/file.pdf" target="_blank">get another PDF</a>
